--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
-/* Empty. Add your own CSS if you like */
 ion-content {
-    background: lightgray; /* Old browsers */
+background: rgba(206,172,166,1);
+background: -moz-radial-gradient(center, ellipse cover, rgba(206,172,166,1) 0%, rgba(180,83,66,0.87) 35%, rgba(173,57,37,0.87) 45%);
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(206,172,166,1)), color-stop(35%, rgba(180,83,66,0.87)), color-stop(45%, rgba(173,57,37,0.87)));
+background: -webkit-radial-gradient(center, ellipse cover, rgba(206,172,166,1) 0%, rgba(180,83,66,0.87) 35%, rgba(173,57,37,0.87) 45%);
+background: -o-radial-gradient(center, ellipse cover, rgba(206,172,166,1) 0%, rgba(180,83,66,0.87) 35%, rgba(173,57,37,0.87) 45%);
+background: -ms-radial-gradient(center, ellipse cover, rgba(206,172,166,1) 0%, rgba(180,83,66,0.87) 35%, rgba(173,57,37,0.87) 45%);
+background: radial-gradient(ellipse at center, rgba(206,172,166,1) 0%, rgba(180,83,66,0.87) 35%, rgba(173,57,37,0.87) 45%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ceaca6', endColorstr='#ad3925', GradientType=1 );
 }
 
 .versie{
